--- a/.travis.yml
+++ b/.travis.yml
@@ -14,19 +14,21 @@ env:
     - GIT_COMMITTER_EMAIL=ta2@o2p.jp
     - GIT_AUTHOR_NAME=kubosho_
     - GIT_AUTHOR_EMAIL=ta2@o2p.jp
-    - REDPEN_URL=https://github.com/recruit-tech/redpen/releases/download
     - REDPEN_VER=1.6.2
     - NODEJS_VER=6.2.2
+    - secure: <token>
 
 install:
-  - curl -OL $REDPEN_URL/v$REDPEN_VER/redpen-$REDPEN_VER.tar.gz
-  - tar xvf redpen-$REDPEN_VER.tar.gz
+  - ./bin/setup-redpen.sh $REDPEN_VER
   - nvm install $NODEJS_VER
   - nvm use $NODEJS_VER
-  - bundle install
+  - bundle install --path vendor/bundle
   - npm install
 
 cache:
   directories:
-  - vendor/bundle
-  - node_modules
+    - vendor/bundle
+    - node_modules
+
+after_success:
+  - '[ "$TRAVIS_BRANCH" == "master" ] && [ "${TRAVIS_PULL_REQUEST}" = "false" ] && [ "$GH_TOKEN" ] && bundle exec rake
