--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "Re:VIEW boilerplate",
   "scripts": {
+    "test": "gulp redpen",
     "clean": "gulp clean",
     "pdf": "gulp pdf",
     "web": "gulp web"
@@ -13,13 +14,14 @@
   },
   "keywords": [
     "book",
-    "lovelive"
+    "re:view"
   ],
   "author": "kubosho",
   "license": "MIT",
   "private": true,
   "devDependencies": {
     "del": "^2.2.1",
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-exec": "^2.1.2"
   }
 }
