--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Re:VIEW boilerplate",
   "scripts": {
     "test": "gulp redpen",
+    "setup": "bundle install --path vendor/bundle && npm install && ./bin/setup-redpen.sh 1.6.2",
     "deploy": "gulp publish",
     "clean": "gulp clean",
     "pdf": "gulp pdf",
