fix(CI): Travis CIでビルドが成功したときに実行するスクリプトが間違っていた

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,4 +31,4 @@ cache:
     - node_modules
 
 after_success:
-  - '[ "$TRAVIS_BRANCH" == "master" ] && [ "${TRAVIS_PULL_REQUEST}" = "false" ] && [ "$GH_TOKEN" ] && bundle exec rake
+  - '[ "$TRAVIS_BRANCH" == "master" ] && [ "${TRAVIS_PULL_REQUEST}" = "false" ] && [ "$GH_TOKEN" ] && npm run deploy
