--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "gulp redpen",
     "setup": "bundle install --path vendor/bundle && npm install && ./bin/setup-redpen.sh 1.6.2",
-    "deploy": "gulp publish",
+    "deploy": "gulp deploy",
     "clean": "gulp clean",
     "pdf": "gulp pdf",
     "web": "gulp web"
